[gd_scene load_steps=4 format=3 uid="uid://cnljlt5sjugwi"]

[ext_resource type="Script" path="res://Scripts/sign.gd" id="1_83acv"]
[ext_resource type="Texture2D" uid="uid://cf2t2vr55batk" path="res://Assets/basicc.png" id="1_g80du"]

[sub_resource type="CircleShape2D" id="CircleShape2D_r7va7"]
radius = 40.0

[node name="Sign" type="Node2D"]
script = ExtResource("1_83acv")

[node name="SignSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_g80du")
hframes = 5
vframes = 5
frame = 24

[node name="Area2D" type="Area2D" parent="SignSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SignSprite/Area2D"]
shape = SubResource("CircleShape2D_r7va7")

[node name="Label" type="Label" parent="."]
offset_left = -74.0
offset_top = -47.0
offset_right = 74.0
offset_bottom = -24.0
text = "Press 'E' to interact"

[connection signal="body_entered" from="SignSprite/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="SignSprite/Area2D" to="." method="_on_area_2d_body_exited"]
